<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.AboutFragment">

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusableInTouchMode="true"
			android:gravity="center"
			android:orientation="vertical"
			android:paddingTop="16dp"
			android:paddingBottom="16dp">

			<TextView
				android:id="@+id/versionTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:drawableStart="@mipmap/ic_launcher"
				android:drawablePadding="16dp"
				android:gravity="center_vertical"
				android:textAppearance="@style/TextAppearance.AppCompat.Large"
				android:textIsSelectable="true"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/aboutLicenseInfoTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:autoLink="web"
				android:lineSpacingMultiplier="1.2"
				android:paddingStart="@dimen/text_content_margin"
				android:paddingEnd="@dimen/text_content_margin"
				android:text="@string/license"
				android:textAlignment="center"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:textIsSelectable="true"/>

			<TextView
				android:id="@+id/aboutRepoInfoTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:autoLink="web"
				android:lineSpacingMultiplier="1.2"
				android:paddingStart="@dimen/text_content_margin"
				android:paddingEnd="@dimen/text_content_margin"
				android:text="@string/repo"
				android:textAlignment="center"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:textIsSelectable="true"/>

			<TextView
				android:id="@+id/aboutLicensesButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				android:lineSpacingMultiplier="1.2"
				android:padding="12dp"
				android:paddingStart="@dimen/text_content_margin"
				android:paddingEnd="@dimen/text_content_margin"
				android:text="@string/title_licenses"
				android:textAlignment="center"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:textColor="@color/colorPrimaryDark"/>

		</LinearLayout>
	</android.support.v4.widget.NestedScrollView>
</FrameLayout>